fix: link path add: css, js

--- a/src/main/webapp/lunchOrder.html
+++ b/src/main/webapp/lunchOrder.html
@@ -20,9 +20,9 @@
 <head>
   <meta charset="utf-8">
   <title>お弁当注文システム</title>
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
-  <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
+  <link rel="stylesheet" href="jquery.mobile-1.0b1.min.css" />
+  <script src="jquery-1.6.1.min.js"></script>
+  <script src="jquery.mobile-1.0b1.min.js"></script>
 </head>
 <body>
   <div data-role="page">
