--- a/src/main/webapp/lunchOrder.html
+++ b/src/main/webapp/lunchOrder.html
@@ -20,9 +20,14 @@
 <head>
   <meta charset="utf-8">
   <title>お弁当注文システム</title>
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
+  <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
+  <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
+  <!-- 
   <link rel="stylesheet" href="jquery.mobile-1.0b1.min.css" />
   <script src="jquery-1.6.1.min.js"></script>
   <script src="jquery.mobile-1.0b1.min.js"></script>
+  -->
 </head>
 <body>
   <div data-role="page">
@@ -71,7 +76,7 @@
     </div>
     <div data-role="footer"><h1>by komusubi</h1></div>
   </div>
-  <div data-role="page" data-add-back-btn="true" id="tamagoya">
+  <div data-role="page" data-add-back-btn="true" data-back-btn-text="戻る" id="tamagoya">
     <div data-role="header"><h1>玉子屋</h1></div>
     <div data-role="content">
       <ul data-role="listview">
@@ -85,7 +90,7 @@
     </div>
     <div data-role="footer"><h1>by komusubi</h1></div>
   </div>
-  <div data-role="page" data-add-back-btn="true" id="fresh">
+  <div data-role="page" data-add-back-btn="true" data-back-btn-text="戻る" id="fresh">
     <div data-role="header" data-position="fixed"><h1>フレッシュランチ</h1></div>
     <div data-role="content">
       <ul data-role="listview">
