fix: header title

--- a/src/main/webapp/lunchOrder.html
+++ b/src/main/webapp/lunchOrder.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div data-role="page">
-    <div data-role="header"><h1>お弁当注文システム</h1></div>
+    <div data-role="header"><h1>お弁当注文</h1></div>
     <div data-role="content">
     <!-- 
     <label for="loginId">ID:</label>
