--- a/src/main/webapp/lunchOrder.html
+++ b/src/main/webapp/lunchOrder.html
@@ -19,7 +19,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <title>お弁当注文システム</title>
+  <title>お弁当注文</title>
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.css" />
   <script src="http://code.jquery.com/jquery-1.6.1.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.0b1/jquery.mobile-1.0b1.min.js"></script>
